Another attempt to fix the multi-clang problem

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,10 +19,12 @@ concurrency:
   cancel-in-progress: true
 
 env:
+  LLVM_VERSION: 15
+  LIBCLANG_PATH: /usr/lib/llvm-${{ env.LLVM_VERSION }}  # Change this when switching Ubuntu releases
+  MINIMAL_RUST: '1.78.0'  # Minimal Supported Rust Version
   RUSTFLAGS: '-D warnings'
   RUSTDOCFLAGS: '-D warnings'
   RUST_LOG: 'warn'
-  MINIMAL_RUST: '1.78.0'  # Minimal Supported Rust Version
 
 jobs:
   # Workaround for github CI dropping env var expansion in matrix strategy
@@ -30,7 +32,7 @@ jobs:
     # Don't run CI twice when a PR is created from a branch internal to the repo
     if: github.event_name == 'push' || github.event_name == 'schedule' || github.event.pull_request.head.repo.full_name != github.repository
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     outputs:
       MINIMAL_RUST: ${{ env.MINIMAL_RUST }}
@@ -52,7 +54,7 @@ jobs:
     # Don't run CI twice when a PR is created from a branch internal to the repo
     if: github.event_name == 'push' || github.event_name == 'schedule' || github.event.pull_request.head.repo.full_name != github.repository
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     env:
       # OpenCL feature is needed on Ubuntu because their StarPU is built with it
@@ -79,7 +81,7 @@ jobs:
         uses: awalsh128/cache-apt-pkgs-action@latest
         with:
           version: 1.0
-          packages: libstarpu-dev
+          packages: libstarpu-dev libclang1-${{ env.LLVM_VERSION }}
 
       - name: Check format
         run: cargo fmt --all --check
@@ -105,7 +107,7 @@ jobs:
     # Don't run in scheduled jobs, that's what test-scheduled is for
     if: github.event_name == 'push' || github.event.pull_request.head.repo.full_name != github.repository
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     needs: matrix_vars
 
@@ -131,7 +133,7 @@ jobs:
         uses: awalsh128/cache-apt-pkgs-action@latest
         with:
           version: 1.0
-          packages: libstarpu-dev
+          packages: libstarpu-dev libclang1-${{ env.LLVM_VERSION }}
 
       - name: Run tests
         run: cargo test --workspace ${{ env.FEATURES_FLAG }}
@@ -158,7 +160,7 @@ jobs:
     # Don't run in scheduled jobs, that's what test-scheduled is for
     if: github.event_name == 'push' || github.event.pull_request.head.repo.full_name != github.repository
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     needs: matrix_vars
 
@@ -184,7 +186,7 @@ jobs:
         uses: awalsh128/cache-apt-pkgs-action@latest
         with:
           version: 1.0
-          packages: libstarpu-dev
+          packages: libstarpu-dev libclang1-${{ env.LLVM_VERSION }}
 
       - name: Run unit and doc tests
         run: cargo test --workspace --release ${{ env.FEATURES_FLAG }}
@@ -203,7 +205,7 @@ jobs:
     # Don't run CI twice when a PR is created from a branch internal to the repo
     if: github.event_name == 'push' || github.event_name == 'schedule' || github.event.pull_request.head.repo.full_name != github.repository
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     env:
       JOB_FLAGS: '--workspace --features=opencl'
@@ -226,7 +228,7 @@ jobs:
         uses: awalsh128/cache-apt-pkgs-action@latest
         with:
           version: 1.0
-          packages: libstarpu-dev
+          packages: libstarpu-dev libclang1-${{ env.LLVM_VERSION }}
 
       - name: Install cargo-careful
         uses: baptiste0928/cargo-install@v3
@@ -246,7 +248,7 @@ jobs:
     # Don't run in scheduled jobs, coverage doesn't change on its own
     if: github.event_name == 'push' || github.event.pull_request.head.repo.full_name != github.repository
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     steps:
       - name: Checkout sources
@@ -261,7 +263,7 @@ jobs:
         uses: awalsh128/cache-apt-pkgs-action@latest
         with:
           version: 1.0
-          packages: libstarpu-dev
+          packages: libstarpu-dev libclang1-${{ env.LLVM_VERSION }}
 
       - name: Install cargo-tarpaulin
         uses: baptiste0928/cargo-install@v3
@@ -292,7 +294,7 @@ jobs:
   test-scheduled:
     if: github.event_name == 'schedule'
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     needs: matrix_vars
 
@@ -319,7 +321,7 @@ jobs:
         uses: awalsh128/cache-apt-pkgs-action@latest
         with:
           version: 1.0
-          packages: libstarpu-dev
+          packages: libstarpu-dev libclang1-${{ env.LLVM_VERSION }}
 
       - name: Install cargo-examples
         uses: baptiste0928/cargo-install@v3
