Well, if I can't...

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,8 +19,8 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  LLVM_VERSION: 15
-  LIBCLANG_PATH: /usr/lib/llvm-$LLVM_VERSION  # Change this when switching Ubuntu releases
+  LLVM_VERSION: 15  # Change this when switching Ubuntu releases
+  LIBCLANG_PATH: /usr/lib/llvm-15  # Change this when switching Ubuntu releases
   MINIMAL_RUST: '1.78.0'  # Minimal Supported Rust Version
   RUSTFLAGS: '-D warnings'
   RUSTDOCFLAGS: '-D warnings'
