Apparently the PKG_CONFIG_PATH isn't set up right...

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,7 @@ env:
   LLVM_VERSION: 15  # Change this when switching Ubuntu releases
   LIBCLANG_PATH: /usr/lib/llvm-15  # Change this when switching Ubuntu releases
   MINIMAL_RUST: '1.78.0'  # Minimal Supported Rust Version
+  PKG_CONFIG_PATH: /usr/lib/x86_64-linux-gnu/pkgconfig/
   RUSTFLAGS: '-D warnings'
   RUSTDOCFLAGS: '-D warnings'
   RUST_LOG: 'warn'
