Let's be more specific

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -91,7 +91,7 @@ jobs:
 
 
       - name: DEBUG where the fuck is my starpu
-        run: ls ${PKG_CONFIG_PATH}
+        run: find / -name "libstarpu.pc"
 
 
 
